Quick CSS fix to elements with max-width properties (added flex col + align center to Main).

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #D9D9D9;
   padding: 20px;
   height: 100vh;
+  align-items: center;
+}
+
+main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -35,6 +39,9 @@ section.game-status {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 350px;
+  min-height: 60px;
   border-radius: 4px;
   margin-block: 30px;
 }
